--- a/src/lib/assets/i18n/ar.json
+++ b/src/lib/assets/i18n/ar.json
@@ -1225,7 +1225,8 @@
       "download": "تحميل المرفق",
       "loading": "TO TRANSLATE - Uploading...",
       "remove": "الحذف",
-      "title": "المرفقات"
+      "title": "المرفقات",
+      "no_attachment": "TO TRANSLATE - No attachment available"
     },
     "footer": {
       "ask_evaluation": "طلب التقييم",
