--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -1225,7 +1225,8 @@
       "download": "TO TRANSLATE - Download the attachment",
       "loading": "TO TRANSLATE - Uploading...",
       "remove": "Αφαίρεση",
-      "title": "Συνημμένα"
+      "title": "Συνημμένα",
+      "no_attachment": "TO TRANSLATE - No attachment available"
     },
     "footer": {
       "ask_evaluation": "Αίτηση ελέγχου",
