--- a/src/lib/assets/i18n/et.json
+++ b/src/lib/assets/i18n/et.json
@@ -1225,7 +1225,8 @@
       "download": "TO TRANSLATE - Download the attachment",
       "loading": "TO TRANSLATE - Uploading...",
       "remove": "Eemalda",
-      "title": "Manused"
+      "title": "Manused",
+      "no_attachment": "TO TRANSLATE - No attachment available"
     },
     "footer": {
       "ask_evaluation": "Küsi ülevaatust",
