--- a/src/lib/assets/i18n/fr.json
+++ b/src/lib/assets/i18n/fr.json
@@ -56,7 +56,7 @@
     "transaction_error": "Impossible de traiter votre demande.",
     "uppercase": "Majuscule",
     "wrong_activation_code": "(erroné)",
-    "wrong_confirmation": "Confirmation erronée",
+    "wrong_confirmation": "Les mots de passe ne sont pas identiques",
     "wrong_email": "Email invalide",
     "errors": {
       "sign_in": {
