feat: update traduction for wrong confirmation

--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -56,7 +56,7 @@
     "transaction_error": "Die Anforderung kann nicht bearbeitet werden.",
     "uppercase": "Großbuchstaben",
     "wrong_activation_code": "(falsch)",
-    "wrong_confirmation": "fehlerhafte Bestätigung",
+    "wrong_confirmation": "TO TRANSLATE - Passwords are not the same",
     "wrong_email": "falsche E-Mail-Adresse",
     "errors": {
       "sign_in": {
