--- a/src/lib/assets/i18n/fr.json
+++ b/src/lib/assets/i18n/fr.json
@@ -47,7 +47,7 @@
     "sign_in": "S'identifier",
     "sign_in_button": "Se connecter",
     "sign_out_button": "Se déconnecter",
-    "special_character": "Caractère accentué",
+    "special_character": "caractère spécial (!@#$%^&*(),.?...)",
     "start": "Commencer",
     "start_app": "Accéder à l'outil PIA (Beta)",
     "subtitle1": "Une plateforme pour créer <br> et administrer vos pia",
