--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -47,7 +47,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
     "start": "Старт",
     "start_app": "Достъп до софтуера за ОВЗД (Beta)",
     "subtitle1": "Платформа за създаване <br> и управление на вашите ОВЗД",
