--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -47,7 +47,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
     "start": "Έναρξη",
     "start_app": "Πρόσβαση στην εφαρμογή ΕΑ (Beta)",
     "subtitle1": "Μια πλατφόρμα για να δημιουργήσετε <br> και να διαχειριστείτε τις ΕΑ σας",
