--- a/src/lib/assets/i18n/et.json
+++ b/src/lib/assets/i18n/et.json
@@ -47,7 +47,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
     "start": "Alusta",
     "start_app": "Juurdepääs mõjuhinnangu tarkvarale (Beta)",
     "subtitle1": "Platvorm mõjuhinnangu loomiseks <br> ja haldamiseks",
