--- a/src/lib/assets/i18n/hr.json
+++ b/src/lib/assets/i18n/hr.json
@@ -47,7 +47,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
     "start": "Početak",
     "start_app": "Pristupite softveru za PUP (Beta)",
     "subtitle1": "Platforma za stvaranje <br> i upravljanje Vašim PUP-ovima",
