--- a/src/lib/assets/i18n/cz.json
+++ b/src/lib/assets/i18n/cz.json
@@ -47,7 +47,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
     "start": "Start",
     "start_app": "Přístup k softwaru PIA (Beta)",
     "subtitle1": "Platforma pro vytváření a správu vašich PIA",
