--- a/src/lib/assets/i18n/dk.json
+++ b/src/lib/assets/i18n/dk.json
@@ -47,7 +47,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
     "start": "Start",
     "start_app": "Start Konsekvensanalysen (Beta)",
     "subtitle1": "En platform til at skabe <br> og styre PIA konsekvensanalyser (Privacy Impact Assessment)",
