--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -47,7 +47,7 @@
     "sign_in": "Sign in",
     "sign_in_button": "Sign in",
     "sign_out_button": "Sign out",
-    "special_character": "Special character",
+    "special_character": "Special character (!@#$%^&*(),.?...)",
     "start": "Start",
     "start_app": "Access the PIA's software (Beta)",
     "subtitle1": "A platform to create <br> and manage your PIAs",
