--- a/src/lib/assets/i18n/fi.json
+++ b/src/lib/assets/i18n/fi.json
@@ -47,7 +47,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
     "start": "Aloita",
     "start_app": "Tietosuojaa koskevan vaikutustenarvioinnin ohjelmisto (beeta)",
     "subtitle1": "Alusta tietosuojaa koskevien <br>  vaikutustenarviointien luomiseen ja hallintaan",
