--- a/src/lib/assets/i18n/no.json
+++ b/src/lib/assets/i18n/no.json
@@ -47,7 +47,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
     "start": "Start",
     "start_app": "Tilgang til PIAs programvare (Beta)",
     "subtitle1": "Et program for å opprette <br> og administrere PIA",
