feat: change example for special character

--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -30,6 +30,7 @@
     "confirm": "Bestätigen",
     "confirmation": "Bestätigung",
     "continue": "Weiter",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "Anlegen",
     "create_account2": "Benutzerkonto anlegen",
     "description": "Diese Software der <strong>französischen Datenschutzbehörde (CNIL)</strong> soll den Datenverantwortlichen bei der Erstellung und dem Nachweis der Einhaltung der DS-GVO helfen. Sie hilft bei der Durchführung einer Datenschutz-Folgenabschätzung, indem sie die Verwendung der von der CNIL entwickelten PIA-Methode erleichtert.",
