--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "Αυτό το λογισμικό από τη <strong>Γαλλική Αρχή Προστασίας Δεδομένων Προσωπικού Χαρακτήρα (CNIL)</strong> έχει σκοπό να καθοδηγήσει τους υπεύθυνους επεξεργασίας στη δημιουργία και απόδειξη συμμόρφωσης στον ΓΚΠΔ. Βοηθάει στην ορθή εκτέλεση μιας εκτίμησης αντικτύπου διευκολύνοντας τη χρήση της μεθόδου ΕΑ που αναπτύχθηκε από την CNIL.",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Έναρξη",
     "start_app": "Πρόσβαση στην εφαρμογή ΕΑ (Beta)",
     "subtitle1": "Μια πλατφόρμα για να δημιουργήσετε <br> και να διαχειριστείτε τις ΕΑ σας",
