--- a/src/lib/assets/i18n/et.json
+++ b/src/lib/assets/i18n/et.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "Prantsusmaa andmekaitse järelevalveasutuse (CNIL) loodud tarkvara on mõeldud vastutava töötleja abistamiseks isikuandmete töötlemise vastavusse viimiseks  Euroopa Liidu isikuandmete kaitse üldmääruse nõuetele ja nõuetele vastavuse tõendamiseks. Tarkvara aitab läbi viia andmekaitsealase mõjuhinnangu hõlbustades kasutades CNIL’i poolt loodud metoodikat",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Alusta",
     "start_app": "Juurdepääs mõjuhinnangu tarkvarale (Beta)",
     "subtitle1": "Platvorm mõjuhinnangu loomiseks <br> ja haldamiseks",
