--- a/src/lib/assets/i18n/lt.json
+++ b/src/lib/assets/i18n/lt.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "Ši programa Ši <strong>Prancūzijos duomenų apsaugos inspekcijos (CNIL) </strong> sukurta programa, skirta padėti duomenų valdytojams užtikrinti asmens duomenų tvarkymo atitikti BDAR reikalavimams. Jos pagalba galima tinkamai atlikti poveikio duomenų apsaugai vertinimą, naudojant PIA programos metodiką.",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Pradėti",
     "start_app": "Nauotis PIA programa (Beta ver.)",
     "subtitle1": "Platforma, skirta PDAV sukūrimui <br> ir valdymui",
