--- a/src/lib/assets/i18n/no.json
+++ b/src/lib/assets/i18n/no.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "Denne programvaren fra den <strong>franske databeskyttelsesmyndigheten (CNIL)</strong> er ment å hjelpe databehandlingsansvarlig å behandle personopplysninger i overenstemmelse med GDPR. Programvaren er ment som en hjelp i vurderingen av personvernkonsekvenser (DPIA) gjennom å fasilitere for bruk av PIA-metodikken utviklet av CNIL.",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Start",
     "start_app": "Tilgang til PIAs programvare (Beta)",
     "subtitle1": "Et program for å opprette <br> og administrere PIA",
