--- a/src/lib/assets/i18n/ro.json
+++ b/src/lib/assets/i18n/ro.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "Acest software creat de către <strong>Autoritatea Franceza pentru Protecția Datelor (CNIL)</strong> este menit să îndrume auditorii în crearea și demonstrarea conformității cu politica GDPR. Acesta ajută la realizarea corectă a analizei impactului asupra confidențialității datelor facilitând utilizarea metodei PIA dezvoltată de către CNIL.",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Început",
     "start_app": "Acces software (Beta)",
     "subtitle1": "O platformă pentru a crea <br> și administra your PIAs",
