--- a/src/lib/assets/i18n/fi.json
+++ b/src/lib/assets/i18n/fi.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "Tämä <strong>Ranskan tietosuojaviranomaisen (CNIL)</strong> laatima ohjelmisto on tarkoitettu avustamaan rekisterinpitäjiä yleisen tietosuoja-asetuksen vaatimusten täyttämisessä ja sen osoittamisessa. Ohjelmisto mahdollistaa tietosuojaa koskevan vaikutustenarvioinnin tekemisen CNIL:n kehittämällä menetelmällä.",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Aloita",
     "start_app": "Tietosuojaa koskevan vaikutustenarvioinnin ohjelmisto (beeta)",
     "subtitle1": "Alusta tietosuojaa koskevien <br>  vaikutustenarviointien luomiseen ja hallintaan",
