--- a/src/lib/assets/i18n/hu.json
+++ b/src/lib/assets/i18n/hu.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "A francia adatvédelmi hatóság (CNIL) által kifejlesztett szoftver célja iránymutatást adni az adatkezelőknek a GDPR betartásához, valamint az annak rendelkezéseivel való összhang igazolásához.",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Kezdés",
     "start_app": "Hozzáférés a DPIA-software-hez (Beta)",
     "subtitle1": "Adatvédelmi hatásvizsgálat létrehozására és kezelésére alkalmas felület",
