--- a/src/lib/assets/i18n/lv.json
+++ b/src/lib/assets/i18n/lv.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "Šī <strong>Francijas Datu aizsardzības iestādes(CNIL)</strong> programmatūra ir paredzēta, lai palīdzētu datu pārziņiem veidot un demonstrēt atbilstību VDAR. Tā palīdz pienācīgi veikt datu aizsardzības ietekmes novērtējumu, izmantojot CNIL izstrādāto PIA metodi.",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Sākt",
     "start_app": "Piekļuve PIA programmatūrai(Beta)",
     "subtitle1": "Platforma, lai izveidotu <br> un pārvaldītu savus PIA",
