--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -30,6 +30,7 @@
     "confirm": "Bevestigen",
     "confirmation": "Bevestiging",
     "continue": "Verdergaan",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "Registreren",
     "create_account2": "Account aanmaken",
     "description": "De PIA-software van de <strong> Franse autoriteit voor gegevensbescherming (CNIL) </strong> is bedoeld als ondersteuningsmiddel voor de verwerkingsverantwoordelijken bij de implementatie van de verplichtingen van de AVG. De software begeleidt de uitvoering van een gegevensbeschermingseffectbeoordeling en wil het gebruik van de door de CNIL ontwikkelde PIA-richtlijnen vergemakkelijken.",
