--- a/src/lib/assets/i18n/sl.json
+++ b/src/lib/assets/i18n/sl.json
@@ -30,6 +30,7 @@
     "confirm": "TO TRANSLATE - Confirm",
     "confirmation": "TO TRANSLATE - Confirmation",
     "continue": "TO TRANSLATE - Continue",
+    "activate_account": "TO TRANSLATE - activate account",
     "create_account": "TO TRANSLATE - Sign up",
     "create_account2": "TO TRANSLATE - Create account",
     "description": "Ovaj softver koji je izradio <strong>French Data Protection Authority (CNIL)</strong> namijenjen je kao smjernica voditeljima obrade u stvaranju i dokazivanju usklađenosti s OUZP-om. On pomaže pravilno provesti procjenu učinka na zaštitu podataka olakšavanjem korištenja metode za PUP koja je razvijena od strane CNIL-a.",
@@ -47,7 +48,7 @@
     "sign_in": "TO TRANSLATE - Sign in",
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
-    "special_character": "TO TRANSLATE - Special character (!@#$%^&*(),.?...)",
+    "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
     "start": "Početak",
     "start_app": "Pristupite softveru za PUP (Beta)",
     "subtitle1": "Platforma za stvaranje <br> i upravljanje Vašim PUP-ovima",
