--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -1619,6 +1619,7 @@
     "preview_title": "Vorschau",
     "preview_validation": "Überprüfung",
     "preview_validation_section": "Überprüfung",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Zurück zur vorherigen Seite",
     "rejection_reason": "Ablehnungsgrund",
     "revision": {
