--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -1619,6 +1619,7 @@
     "preview_title": "Preview",
     "preview_validation": "Validation",
     "preview_validation_section": "Validation",
+    "preview_guests": "Guests",
     "previous_page": "Back to previous page",
     "rejection_reason": "Rejection reason",
     "revision": {
