--- a/src/lib/assets/i18n/pl.json
+++ b/src/lib/assets/i18n/pl.json
@@ -1619,6 +1619,7 @@
     "preview_title": "Przegląd",
     "preview_validation": "Zatwierdzenie",
     "preview_validation_section": "Zatwierdzenie",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Powrót do poprzedniej strony",
     "rejection_reason": "Powód odmowy",
     "revision": {
