--- a/src/lib/assets/i18n/pt.json
+++ b/src/lib/assets/i18n/pt.json
@@ -1619,6 +1619,7 @@
     "preview_title": "Pré-visualizar",
     "preview_validation": "Validação",
     "preview_validation_section": "Validação",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Voltar para a página anterior",
     "rejection_reason": "Motivo da rejeição",
     "revision": {
