--- a/src/lib/assets/i18n/ro.json
+++ b/src/lib/assets/i18n/ro.json
@@ -1619,6 +1619,7 @@
     "preview_title": "TO TRANSLATE - Preview",
     "preview_validation": "TO TRANSLATE - Validation",
     "preview_validation_section": "TO TRANSLATE - Validation",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Înapoi la pagina anterioară",
     "rejection_reason": "Motivul respingerii",
     "revision": {
