--- a/src/lib/assets/i18n/sv.json
+++ b/src/lib/assets/i18n/sv.json
@@ -1619,6 +1619,7 @@
     "preview_title": "Förhandsvisning",
     "preview_validation": "Godkännande",
     "preview_validation_section": "Godkännande",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Tillbaka till föregående sida",
     "rejection_reason": "Skäl för underkännande",
     "revision": {
