--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -1619,6 +1619,7 @@
     "preview_title": "Първоначален преглед",
     "preview_validation": "Валидиране",
     "preview_validation_section": "Валидиране",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Назад към предишната страница",
     "rejection_reason": "Причина за отхвърлянето",
     "revision": {
