--- a/src/lib/assets/i18n/es.json
+++ b/src/lib/assets/i18n/es.json
@@ -1619,6 +1619,7 @@
     "preview_title": "TO TRANSLATE - Preview",
     "preview_validation": "TO TRANSLATE - Validation",
     "preview_validation_section": "TO TRANSLATE - Validation",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Volver a la página anterior",
     "rejection_reason": "Razón del rechazo",
     "revision": {
