--- a/src/lib/assets/i18n/fi.json
+++ b/src/lib/assets/i18n/fi.json
@@ -1619,6 +1619,7 @@
     "preview_title": "TO TRANSLATE - Preview",
     "preview_validation": "TO TRANSLATE - Validation",
     "preview_validation_section": "TO TRANSLATE - Validation",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Takaisin edelliselle sivulle",
     "rejection_reason": "Hylkäyksen syy",
     "revision": {
