--- a/src/lib/assets/i18n/fr.json
+++ b/src/lib/assets/i18n/fr.json
@@ -1619,6 +1619,7 @@
     "preview_title": "Aperçu de l'analyse",
     "preview_validation": "Validation",
     "preview_validation_section": "Validation",
+    "preview_guests": "Invités",
     "previous_page": "Retour à la page précédente",
     "rejection_reason": "Raison du refus",
     "revision": {
