--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -1619,6 +1619,7 @@
     "preview_title": "Preview",
     "preview_validation": "Valideren",
     "preview_validation_section": "Validatie",
+    "preview_guests": "TO TRANSLATE - Guests",
     "previous_page": "Terug naar de vorige pagina",
     "rejection_reason": "Reden van verwerping",
     "revision": {
