feat: add number key to json

--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Старт",
     "start_app": "Достъп до софтуера за ОВЗД (Beta)",
     "subtitle1": "Платформа за създаване <br> и управление на вашите ОВЗД",
