--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -49,6 +49,7 @@
     "sign_in_button": "Anmelden",
     "sign_out_button": "Abmelden",
     "special_character": "Sonderzeichen",
+    "number": "TO TRANSLATE - Number",
     "start": "Starten",
     "start_app": "Zugriff auf die PIA-Software (Beta)",
     "subtitle1": "Eine Plattform zum Erstellen<br>und Verwalten Ihrer DSFAs",
