--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Έναρξη",
     "start_app": "Πρόσβαση στην εφαρμογή ΕΑ (Beta)",
     "subtitle1": "Μια πλατφόρμα για να δημιουργήσετε <br> και να διαχειριστείτε τις ΕΑ σας",
