--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -48,7 +48,8 @@
     "sign_in": "Sign in",
     "sign_in_button": "Sign in",
     "sign_out_button": "Sign out",
-    "special_character": "Special character (!@#$%^&*()?...)",
+    "special_character": "Special character (!@#$%^&*()?...)",,
+    "number": "Number",
     "start": "Start",
     "start_app": "Access the PIA's software (Beta)",
     "subtitle1": "A platform to create <br> and manage your PIAs",
