--- a/src/lib/assets/i18n/fr.json
+++ b/src/lib/assets/i18n/fr.json
@@ -48,7 +48,8 @@
     "sign_in": "S'identifier",
     "sign_in_button": "Se connecter",
     "sign_out_button": "Se déconnecter",
-    "special_character": "caractère spécial (!@#$%^&*()?...)",
+    "special_character": "Caractère spécial (!@#$%^&*()?...)",
+    "number": "Chiffre",
     "start": "Commencer",
     "start_app": "Accéder à l'outil PIA (Beta)",
     "subtitle1": "Une plateforme pour créer <br> et administrer vos pia",
