--- a/src/lib/assets/i18n/lv.json
+++ b/src/lib/assets/i18n/lv.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Sākt",
     "start_app": "Piekļuve PIA programmatūrai(Beta)",
     "subtitle1": "Platforma, lai izveidotu <br> un pārvaldītu savus PIA",
