--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -49,6 +49,7 @@
     "sign_in_button": "Aanmelden",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "Speciaal teken",
+    "number": "TO TRANSLATE - Number",
     "start": "Beginnen",
     "start_app": "De PIA-software openen (Beta)",
     "subtitle1": "Een platform om uw PIA's te maken en te beheren",
