--- a/src/lib/assets/i18n/no.json
+++ b/src/lib/assets/i18n/no.json
@@ -52,6 +52,7 @@
     "start": "Start",
     "start_app": "Tilgang til PIAs programvare (Beta)",
     "subtitle1": "Et program for å opprette <br> og administrere PIA",
+    "number": "TO TRANSLATE - Number",
     "subtitle2": "Tilgang til verktøy og ordlister",
     "title": "Vurdering av personvernkonsekvenser",
     "transaction_error": "TO TRANSLATE - Unable to process your request.",
