--- a/src/lib/assets/i18n/pt.json
+++ b/src/lib/assets/i18n/pt.json
@@ -49,6 +49,7 @@
     "sign_in_button": "Login",
     "sign_out_button": "Sair",
     "special_character": "Caracter especial",
+    "number": "TO TRANSLATE - Number",
     "start": "Início",
     "start_app": "Acessar ao software PIA (Beta)",
     "subtitle1": "Uma plataforma para criar <br> e gerir as análises de PIA",
