--- a/src/lib/assets/i18n/ro.json
+++ b/src/lib/assets/i18n/ro.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Început",
     "start_app": "Acces software (Beta)",
     "subtitle1": "O platformă pentru a crea <br> și administra your PIAs",
