--- a/src/lib/assets/i18n/sv.json
+++ b/src/lib/assets/i18n/sv.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Start",
     "start_app": "Starta konsekvensanalysen (Beta)",
     "subtitle1": "En plattform för att utföra <br> samt att hantera utförda konsekvensanalyser (PIA - Privacy Impact Assessment)",
