--- a/src/lib/assets/i18n/ar.json
+++ b/src/lib/assets/i18n/ar.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "البداية",
     "start_app": "الولوج إلى أداة تقييم أثر حماية البيانات (مرحلة بيتا)",
     "subtitle1": "منصة من أجل إنشاء <br> وإدارة أدواتكم الخاصة بتقييم أثر حماية البيانات،",
