--- a/src/lib/assets/i18n/et.json
+++ b/src/lib/assets/i18n/et.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Alusta",
     "start_app": "Juurdepääs mõjuhinnangu tarkvarale (Beta)",
     "subtitle1": "Platvorm mõjuhinnangu loomiseks <br> ja haldamiseks",
