--- a/src/lib/assets/i18n/fi.json
+++ b/src/lib/assets/i18n/fi.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Aloita",
     "start_app": "Tietosuojaa koskevan vaikutustenarvioinnin ohjelmisto (beeta)",
     "subtitle1": "Alusta tietosuojaa koskevien <br>  vaikutustenarviointien luomiseen ja hallintaan",
