--- a/src/lib/assets/i18n/hu.json
+++ b/src/lib/assets/i18n/hu.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Kezdés",
     "start_app": "Hozzáférés a DPIA-software-hez (Beta)",
     "subtitle1": "Adatvédelmi hatásvizsgálat létrehozására és kezelésére alkalmas felület",
