--- a/src/lib/assets/i18n/lt.json
+++ b/src/lib/assets/i18n/lt.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Pradėti",
     "start_app": "Nauotis PIA programa (Beta ver.)",
     "subtitle1": "Platforma, skirta PDAV sukūrimui <br> ir valdymui",
