--- a/src/lib/assets/i18n/sl.json
+++ b/src/lib/assets/i18n/sl.json
@@ -49,6 +49,7 @@
     "sign_in_button": "TO TRANSLATE - Sign in",
     "sign_out_button": "TO TRANSLATE - Sign out",
     "special_character": "TO TRANSLATE - Special character (!@#$%^&*()?...)",
+    "number": "TO TRANSLATE - Number",
     "start": "Početak",
     "start_app": "Pristupite softveru za PUP (Beta)",
     "subtitle1": "Platforma za stvaranje <br> i upravljanje Vašim PUP-ovima",
