--- a/src/lib/assets/i18n/no.json
+++ b/src/lib/assets/i18n/no.json
@@ -91,6 +91,7 @@
     }
   },
   "users": {
+    "state": "TO TRANSLATE - Account's state",
     "errors": {
       "edit_user": {
         "406": "TO TRANSLATE - The information provided when creating the account is invalid."
