--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -90,14 +90,6 @@
       "unauthorized": "You are not allowed to access this ressource."
     }
   },
-  "users": {
-    "state": "Account's state",
-    "errors": {
-      "edit_user": {
-        "406": "The information provided when creating the account is invalid."
-      }
-    }
-  },
   "cartography": {
     "important": "Important",
     "legend1": "Planned or existing measures",
@@ -1088,12 +1080,6 @@
     "update_server_url_ok": {
       "content": "The server address has been updated."
     },
-    "users": {
-      "delete": {
-        "confirm": "Remove user",
-        "content": "Are you sure you want to delete this user?"
-      }
-    },
     "validate_evaluation": {
       "content": "This section is ready for validating the PIA."
     },
@@ -1655,7 +1641,17 @@
     "remove_user_with_linked_pias_error_message": "Several PIAs are attached to this user, so you cannot delete him.",
     "technical_admin": "Technical administrator",
     "update": "Update",
-    "user": "User"
+    "user": "User",
+    "state": "Account's state",
+    "errors": {
+      "edit_user": {
+        "406": "The information provided when creating the account is invalid."
+      }
+    },
+    "delete": {
+      "confirm": "Remove user",
+      "content": "Are you sure you want to delete this user?"
+    }
   },
   "validation_page": {
     "add_signed_pia": "Add the signed PIA",
