--- a/src/lib/assets/i18n/pl.json
+++ b/src/lib/assets/i18n/pl.json
@@ -90,14 +90,6 @@
       "unauthorized": "TO TRANSLATE - You are not allowed to access this ressource."
     }
   },
-  "users": {
-    "state": "TO TRANSLATE - Account's state",
-    "errors": {
-      "edit_user": {
-        "406": "TO TRANSLATE - The information provided when creating the account is invalid."
-      }
-    }
-  },
   "cartography": {
     "important": "Poważne",
     "legend1": "Środki istniejące lub przewidziane",
@@ -1088,12 +1080,6 @@
     "update_server_url_ok": {
       "content": "Adres serwera został zaktualizowany."
     },
-    "users": {
-      "delete": {
-        "confirm": "TO TRANSLATE - Remove user",
-        "content": "TO TRANSLATE - Are you sure you want to delete this user?"
-      }
-    },
     "validate_evaluation": {
       "content": "<span class='strong'>Gratulacje,</span><br>ocena tej sekcji została zakończona.<br>Pozostałe sekcje również muszą zostać ocenione, aby móc zatwierdzić PIA"
     },
@@ -1655,7 +1641,17 @@
     "remove_user_with_linked_pias_error_message": "TO TRANSLATE - Several PIAs are attached to this user, so you cannot delete him.",
     "technical_admin": "TO TRANSLATE - Technical administrator",
     "update": "TO TRANSLATE - Update",
-    "user": "TO TRANSLATE - User"
+    "user": "TO TRANSLATE - User",
+    "state": "TO TRANSLATE - Account's state",
+    "errors": {
+      "edit_user": {
+        "406": "TO TRANSLATE - The information provided when creating the account is invalid."
+      }
+    },
+    "delete": {
+      "confirm": "TO TRANSLATE - Remove user",
+      "content": "TO TRANSLATE - Are you sure you want to delete this user?"
+    }
   },
   "validation_page": {
     "add_signed_pia": "Załącz podpisane PIA",
