--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -1651,6 +1651,10 @@
     "delete": {
       "confirm": "Remove user",
       "content": "Are you sure you want to delete this user?"
+    },
+    "access_locked": {
+      "false": "Active",
+      "true": "Waiting for activation"
     }
   },
   "validation_page": {
